<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="detail_fragment"
    app:startDestination="@id/colorListFragment">

    <fragment
        android:id="@+id/colorListFragment"
        android:name="com.egor.gmk.ui.colorlist.ColorListFragment"
        android:label="@string/ColorList"

        tools:layout="@layout/fragment_color_list">

        <action
            android:id="@+id/action_colorListFragment_to_gmkListFragment"
            app:destination="@id/gmkListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_colorListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_colorListFragment_to_allKeycapListFragment2"
            app:destination="@id/allKeycapListFragment2" />
    </fragment>
    <fragment
        android:id="@+id/gmkListFragment"
        android:name="com.egor.gmk.ui.gmklist.GmkListFragment"
        android:label="@string/WordList"
        tools:layout="@layout/fragment_gmk_list">
        <argument
            android:name="number"
            app:argType="integer" />
        <argument
            android:name="word"
            app:argType="string" />
        <action
            android:id="@+id/action_gmkListFragment_to_keycapsDetailFragment"
            app:destination="@id/keycapsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.egor.gmk.ui.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settingsFragment_to_colorListFragment"
            app:destination="@id/colorListFragment" />
    </fragment>
    <fragment
        android:id="@+id/keycapsDetailFragment"
        android:name="com.egor.gmk.ui.colorfrag.KeycapDetailFragment">
        <action
            android:id="@+id/action_keycapsListFragment_to_colorListFragment"
            app:destination="@id/colorListFragment" />
        <argument
            android:name="keycap"
            app:argType="com.egor.gmk.data.GmkListData"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="keycapRoom"
            app:argType="com.egor.gmk.room.Colors"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/allKeycapListFragment2"
        android:name="com.egor.gmk.ui.keycaps.AllKeycapListFragment"
        android:label="Keycaps" >
        <action
            android:id="@+id/action_allKeycapListFragment2_to_colorListFragment"
            app:destination="@id/colorListFragment" />
        <action
            android:id="@+id/action_allKeycapListFragment2_to_keycapsDetailFragment"
            app:destination="@id/keycapsDetailFragment" />

    </fragment>
</navigation>